# stellar-perpetual-glide

./: .env  .env.backup  .env.example  .gitignore  CONTRACTS.md  DEPLOYMENT.md  DEPLOY_VERCEL.md  README.md  REFLECTOR_FUNDING.md  WALLET_INTEGRATION.md  check-reflector-assets.js  env.example  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json  vite.config.ts
api/: webhook-reflector.js
deploy/: VERCEL_TROUBLESHOOTING.md
docs/: REFLECTOR_WEBHOOK.md  STELLAR_INTEGRATION.md
src/: index.css
src/components/: AssetSelector.tsx  ContractTester.tsx  FundingRates.tsx  KaleRewards.tsx  LiquidationAlert.tsx  MobileHeader.tsx  MobileMenu.tsx  NetworkToggle.tsx  OrderBook.tsx  PositionCard.tsx  PriceChart.tsx  RealTimeChart.tsx  ReflectorOracle.tsx  ReflectorStatus.tsx  ReflectorSubscriptions.tsx  ReflectorTest.tsx  TradeForm.tsx  TradingDashboard.tsx  TradingStats.tsx  (+7 more)
src/contracts/: .env.bak  Cargo.toml  README.md  contract-config-mainnet.example  contract-config-testnet.example  contract-config.example  contract-config.json  deploy-mainnet.sh  deploy-price-oracle.sh  deploy-testnet.sh  deploy-trading-contract-testnet.sh  deploy-trading-contract.sh  deploy.sh  deployed-contracts.md  lib.rs  perpetual_contract.rs  reflector.rs  simple_contract.rs  verify-contract.sh
src/contracts/perpetual-trading-contract/: Cargo.toml
src/contracts/perpetual-trading-contract/.cargo/: config.toml
src/contracts/perpetual-trading-contract/src/: lib.rs
src/contracts/price-oracle-contract/: Cargo.toml
src/contracts/price-oracle-contract/src/: lib.rs
(+32 files in other folders)
