[package]
name = "perpetual_futures"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
soroban-sdk = "23.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
rpath = false
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
